--- a/PGA.Rmd
+++ b/PGA.Rmd
@@ -14,80 +14,74 @@ knitr::opts_chunk$set(echo = TRUE)
 The goal of your project is to predict the manner in which they did the exercise. This is the "classe" variable in the training set. You may use any of the other variables to predict with. You should create a report describing how you built your model, how you used cross validation, what you think the expected out of sample error is, and why you made the choices you did. You will also use your prediction model to predict 20 different test cases.
 
 
-## Load library
-```{r library, echo=FALSE}
+##Data loading and processing
 
+```{r warning=FALSE,cache=TRUE}
+setwd("D:/Downloads/R")
+url_train="https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv"
+url_test="https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv"
+download.file(url_train,destfile="training_data.csv")
+download.file(url_test,destfile="testing_data.csv")
+library(readr)
+training<-read.csv("D:/Downloads/R/training_data.csv",na.strings = c("NA", "#DIV/0!", ""))
+testing <- read.csv("D:/Downloads/R/testing_data.csv",na.strings = c("NA", "#DIV/0!", ""))
+```
+
+###Removing columns that contains NA values and irrelevant variables
+
+```{r warning=FALSE,cache=TRUE}
+training <- training[, which(colSums(is.na(training)) == 0)] 
+testing <- testing[, which(colSums(is.na(testing)) == 0)]
+training <- training[,-c(1:7)] ##the first 7 columns are variables that has no relationship with "class"
+testing <- testing[,-c(1:7)]
+```
+
+###Partioning the training set into training and crossvalidation datasets
+```{r warning=FALSE, cache=TRUE}
 library(caret)
-library(knitr)
-library(randomForest)
-library(rpart)
-library(rpart.plot)
-
+set.seed(888)
+training = data.frame(training)
+inTrain <- createDataPartition(training$classe, p=0.70, list=F)
+train <- training[inTrain, ]
+validation <- training[-inTrain, ]
 ```
 
-## Download and loading the Dataset
-```{r load data}
+##Building model and cross validation
 
-# Download the dataset 
-trainUrl <- "https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv"
-testUrl <- "https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv"
-
-
-# Load the dataset into memory
-trainingData <- read.csv(url(trainUrl), na.strings = c("NA", "#DIV/0!", ""))
-testingData <- read.csv(url(testUrl), na.strings = c("NA", "#DIV/0!", ""))
-
-#
-trainingData <- trainingData[, colSums(is.na(trainingData)) == 0]
-testingData <- testingData[, colSums(is.na(testingData)) == 0]
-
-# Delete variables that are not related 
-trainingData <- trainingData[, -c(1:7)]
-testingData <- testingData[, -c(1:7)]
-
-# partioning the training set into two different dataset
-
-traningPartitionData <- createDataPartition(trainingData$classe,  p = 0.7, list = F)
-trainingDataSet <- trainingData[traningPartitionData, ]
-testingDataSet <- trainingData[-traningPartitionData, ]
-dim(trainingData); dim(testingDataSet)
-
+###Modelling with regression tree ("rpart")
+```{r warning=FALSE, cache=TRUE}
+fit1 <- train(classe ~ ., method="rpart", data=train)
+val1 <- predict(fit1, validation)
+confusionMatrix(validation$classe, val1)
 ```
 
-## Prediction model 1 - decision tree
-
-```{r feature decision tree}
-
-decisionTreeModel <- rpart(classe ~ ., data = trainingDataSet, method = "class")
-decisionTreePrediction <- predict(decisionTreeModel, testingDataSet, type = "class")
-
-# Plot Decision Tree
-rpart.plot(decisionTreeModel, main = "Decision Tree", under = T, faclen = 0)
-
-# Using confusion matrix to test results
-confusionMatrix(decisionTreePrediction, testingDataSet$classe)
-
+###Modelling with random forest ("rf")
+```{r warning=FALSE, cache=TRUE}
+fit2 <- train(classe ~ ., method="rf", data=train, prox=TRUE,ntree=250)
+val2 <- predict(fit2, validation)
+confusionMatrix(validation$classe, val2)
 ```
 
-
-## Prediction model 2 - random forest
-
-```{r random forest}
-
-randomForestModel <- randomForest(classe ~. , data = trainingDataSet, method = "class")
-randomForestPrediction <- predict(randomForestModel, testingDataSet, type = "class")
-
-confusionMatrix(randomForestPrediction, testingDataSet$classe)
-
+###Modelling with boosted trees ("gbm")
+```{r warning=FALSE, cache=TRUE}
+fit3 <- train(classe ~ ., method="gbm", data=train,trControl=trainControl(method = "repeatedcv", number = 5, repeats = 1),verbose=FALSE)
+val3 <- predict(fit3, validation)
+confusionMatrix(validation$classe, val3)
 ```
 
+The above result show that the random forest model has the highest accuracy in cross validation. Therefore, we will use the random forest model for predicting test samples.
 
-## Prediction model 2 - random forest
-From the result, it show Random Forest accuracy is higher than Decision tree which is 0.9915  > 0.6644. Therefore, we will use random forest to answer the assignment. 
-
-```{r final prediction}
-predictionFinal <- predict(randomForestModel, testingDataSet, type = "class")
-#predictionFinal
-
+##Prediction
+We used the random forest model for prediction
+```{r warning=FALSE, cache=TRUE}
+pred <- predict(fit2, newdata=testing)
+pred
 ```
 
+##Appendix
+
+###Plotting decision tree(method="rpart")
+```{r warning=FALSE, echo=FALSE,cache=TRUE}
+plot(fit1$finalModel, uniform=TRUE,main="Classification Tree")
+text(fit1$finalModel, use.n=TRUE, all=TRUE, cex=0.8)
+```
